--- a/EscapeRoom/ES-theme-police.html
+++ b/EscapeRoom/ES-theme-police.html
@@ -25,7 +25,7 @@
         .banner {
             width: 100%;
             height: 900px;
-            background-image: url(img/theme-banner-TT.jpg);
+            background-image: url(img/theme-banner-TT.png);
             background-repeat: no-repeat;
             background-size: cover;
             overflow: hidden;
@@ -152,6 +152,7 @@
         }
         .themeBtn a {
             color: white;
+            text-decoration: none;
         }
 
 
@@ -307,6 +308,7 @@
             .themeBtn{
                 margin-top: 50px;
             }
+
 
         }
     </style>
