--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -235,6 +235,9 @@
                 right: 30px;
                 bottom: 30px;
             }
+            .card_box{
+                margin-bottom: unset;
+            }
 
         }
     </style>
