--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -440,7 +440,7 @@
                 <img src="../EscapeRoom/test/img/logo-white.png" alt="">
                 <p class="logoName"><a href="/EscapeRoom/index.html">許多門</a></p>
                 <a class="gameName" href="/EscapeRoom/index.html">
-                    <p style="letter-spacing:1.1px;">ESCAPE</p>
+                    <p style="letter-spacing:1.3px;">ESCAPE</p>
                     <p>STUDIOS</p>
                 </a>
             </div>
@@ -613,7 +613,7 @@
 
                 <div class="slide-8">
                     <section class="game-rules d-flex justify-content-center align-items-center">
-                        <div class="container" style="padding-bottom: 5%;">
+                        <div class="container" style="padding-bottom: 10%;">
                             <div class="row d-flex justify-content-around">
                                 <div class="col-lg-4">
                                     <div style=" text-align: center;">
@@ -658,7 +658,7 @@
             </div>
         </div>
 
-        <footer class="container-fluid">
+        <footer class="container-fluid" style="position:relative; z-index:9">
             <div class="row">
                 <div class="information d-flex align-items-center">
                     <div class="container">
@@ -667,7 +667,7 @@
                                 <img src="../EscapeRoom/test/img/logo-white.png" alt="">
                                 <p style="font-size: 24px; margin:0 16px;">許多門</p>
                                 <div class="d-flex" style="flex-direction: column;font-size: 6px;">
-                                    <p style="letter-spacing: 1.1px;">ESCAPE</p>
+                                    <p style="letter-spacing: 1.3px;">ESCAPE</p>
                                     <p>STUDIOS</p>
                                 </div>
                             </div>
@@ -684,8 +684,8 @@
                     </div>
                 </div>
                 <div class="copyright">Copyright &copy; 許多門 Inc. All rights reserved</div>
-                <a class="gotop" href="#"><img src="../EscapeRoom/test/img/gotop.png" alt=""></a>
             </div>
+            <a class="gotop" href="#"><img src="img/gotop.png" alt=""></a>
         </footer>
     </div>
 
@@ -827,10 +827,6 @@
             <a class="gotop" href="#"><img src="img/gotop.png" alt=""></a>
         </div>
     </footer>
-
-
-
-
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
