--- a/EscapeRoom/ES-aboutES.html
+++ b/EscapeRoom/ES-aboutES.html
@@ -355,7 +355,7 @@
             <div class="row d-flex justify-content-center mtb-75">
                 <div class="col-12 col-lg-7 pc justify-content-center "><a href="https://g.page/Tkydoorsss?share"><img
                             src="img/traffic.png" alt=""></a></div>
-                <div class="col-lg-12 d-sm-none d-flex justify-content-center"><a href="https://g.page/Tkydoorsss?share"><img src="img/traffic1.png" alt=""></a></div>
+                <div class="col-lg-12 d-sm-none d-flex justify-content-center"><img src="img/traffic1.png" alt=""></div>
             </div>
         </div>
     </section>
