--- a/EscapeRoom/ES-theme-bomb.html
+++ b/EscapeRoom/ES-theme-bomb.html
@@ -460,9 +460,9 @@
             }
 
             .banner {
-                background-image: url(../EscapeRoom/test/img/theme-banner-phone.png);
+                background-image: url(img/theme-banner-phone.png);
                 width:100%;
-                height:870px;
+                height:579px;
             }
 
             .title {
@@ -750,7 +750,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center ">
-                    <div class="col-lg-2 themeBtn"> <a href="/EscapeRoom/ES-theme-bomb.html">NEXT</a></div>
+                    <div class="col-lg-2 themeBtn"> <a href="/EscapeRoom/ES-theme-doctor.html">NEXT</a></div>
                 </div>
             </div>
         </div>
