--- a/EscapeRoom/ES-theme-bomb.html
+++ b/EscapeRoom/ES-theme-bomb.html
@@ -460,7 +460,7 @@
             }
 
             .banner {
-                background-image: url(img/theme-banner-phone.png);
+                background-image: url(../EscapeRoom/test/img/theme-banner-phone.png);
                 width:100%;
                 height:579px;
             }
