--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -379,6 +379,7 @@
             }
 
             .ham {
+                display:block;
                 width: 40px;
                 height: 40px;
                 position: relative;
