--- a/EscapeRoom/ES-theme-bomb.html
+++ b/EscapeRoom/ES-theme-bomb.html
@@ -466,13 +466,13 @@
             }
 
             .title {
-                color: #CECAB8;
-                font-size: 48px;
+                color: #ffffff;
+                font-size: 60px;
                 line-height: 60px;
-                text-shadow: 10px 10px 25px #5E5E5D;
+                text-shadow: 8px 5px 7px #5E5E5D;
                 position: absolute;
-                left: 25%;
-                top: 46%;
+                left: 10%;
+                top: 34%;
             }
 
             .difficulty1,
@@ -655,7 +655,7 @@
                         <p style="font-size:24px; color:#A74141; line-height:48px; font-weight:bold;">『反恐特搜-爆彈拆除班』，</p>
                         <p>就是因應緊急狀況成立的特別部隊，</p>
                         <p>靠著精良高科技的設備與特別徵召的優秀隊員，</p>
-                        <p>『爆彈拆除班』解決了許多緊急的攻擊事件！</p>
+                        <p>爆彈拆除班解決了許多緊急的攻擊事件！</p>
                     </div>
                     <img class="col-lg-5" style="width: 100%; height: 100%; padding:0" data-aos="fade-left"
                         src="../EscapeRoom/test/img/soldiers2.png" alt="">
@@ -667,8 +667,8 @@
                     style="color: white; font-size:16px; line-height: 36px; text-align: center; flex-direction: column;">
                     <p class="text-s-16" style="color:#A74141;">『反恐特搜-爆彈拆除班』，</p>
                     <p>就是因應緊急狀況成立的特別部隊，</p>
-                    <p>靠著精良高科技的設備與特別徵召的優秀隊員，</p>
-                    <p>『爆彈拆除班』解決了許多緊急的攻擊事件！</p>
+                    <p>靠著高科技的設備與特別徵召的隊員，</p>
+                    <p>爆彈拆除班解決了許多緊急的攻擊事件！</p>
                 </div>
             </div>
         </section>
@@ -687,9 +687,9 @@
             <div class="p-0 row justify-content-center" style="padding-top:75px;">
                 <div class="text col-lg-6" style="color: white;font-size: 16px; line-height: 36px; text-align:center">
                     <p>但是這次......情況有點不一樣，</p>
-                    <p>『爆彈拆除班』要面對看起來『束手無策』的困境！</p>
+                    <p>爆彈拆除班要面對看起來『束手無策』的困境！</p>
                     <p>剩下60分鐘，你們可以順利解除所有的危機嗎？！</p>
-                    <p>要成為『爆彈拆除班』的一員，</p>
+                    <p>要成為爆彈拆除班的一員，</p>
                     <p class="text-s-16" style="color: #A74141; font-size: 24px; line-height:48px; font-weight:bold;">
                         你必須要不成功便成仁的決心！</p>
                 </div>
