--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -810,7 +810,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-4 d-sm-flex align-items-center justify-content-center d-none">
-                            <img src="img/logo.png" alt="">
+                            <img src="./test/img/logo-white.png" alt="">
                             <b class="logoName">許多門</b>
                             <p class="gameName">ESCAPE <br>STUDIOS</p>
                         </div>
