--- a/EscapeRoom/ES-theme-police.html
+++ b/EscapeRoom/ES-theme-police.html
@@ -275,7 +275,8 @@
             }
 
             .game-rules {
-                padding: 20px 0;
+                padding: 75px 0;
+                height: 1035px;
             }
 
             .speaker {
@@ -307,6 +308,9 @@
             }
             .themeBtn{
                 margin-top: 50px;
+            }
+            .fix1{
+                margin: 40px 0;
             }
 
 
@@ -460,7 +464,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="row justify-content-center">
+                        <div class="row justify-content-center fix1">
                             <img class="" src="img/clock.png" alt="">
                             <p class="titleName text-center col-12">挑戰時間</p>
                             <p class="speakerBoss text-center col-12">60分鐘</p class="speakerBoss">
