--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -298,11 +298,11 @@
             }
 
             .logoName{
-                font-size:20.04px;
+                font-size:28.6px;
             }
 
             .gameName{
-                font-size:7.51px;
+                font-size:10.73px;
             }
 
             .pc {
@@ -694,7 +694,7 @@
     <header class="phone">
         <nav id="navbar" class="nav d-flex justify-content-between">
             <div class="navLogo lg-4 d-flex align-items-center justify-content-center">
-                <img src="img/logo.png" alt="">
+                <img src="../EscapeRoom/test/img/logo-white.png" alt="">
                 <b class="logoName"><a href="/EscapeRoom/index.html">許多門</a></b>
                 <p class="gameName"></p><a href="/EscapeRoom/index.html">ESCAPE <br>STUDIOS </a></p>
             </div>
