team project update

--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -294,7 +294,7 @@
         @media(max-width:576px) {
             html {
                 overflow: scroll !important;
-                overflow-y:hidden;
+                /* overflow-y:hidden; */
             }
 
             .logoName{
