--- a/EscapeRoom/ES-theme-bomb.html
+++ b/EscapeRoom/ES-theme-bomb.html
@@ -518,7 +518,8 @@
             }
 
             .game-rules {
-                padding: 20px 0;
+                padding: 75px 0;
+                height: 1035px;
             }
 
             .themeBtn {
@@ -532,6 +533,9 @@
 
             .speakerBoss {
                 line-height: 3;
+            }
+            .fix1{
+                margin: 40px 0;
             }
         }
     </style>
@@ -727,21 +731,21 @@
                 <div class="row">
                     <div class="col-lg-4 ">
                         <div class="row justify-content-center">
-                            <img class="" src="../EscapeRoom/test/img/white-man.png" alt="">
+                            <img class="" src="../EscapeRoom/img/people_b.png" alt="">
                             <p class="titleName text-center col-12">挑戰人數</p>
                             <p class="speakerBoss text-center col-12">4-8人</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="row justify-content-center">
-                            <img class="" src="../EscapeRoom/test/img/clock.png" alt="">
+                        <div class="row justify-content-center fix1">
+                            <img class="" src="../EscapeRoom/img/time_b.png" alt="">
                             <p class="titleName text-center col-12">挑戰時間</p>
                             <p class="speakerBoss text-center col-12">60分鐘</p>
                         </div>
                     </div>
                     <div class="col-lg-4 ">
                         <div class="row justify-content-center">
-                            <img class="" src="../EscapeRoom/test/img/key.png" alt="">
+                            <img class="" src="../EscapeRoom/img/key_b.png" alt="">
                             <p class="titleName text-center col-12">場次時間</p>
                             <p class="speakerBoss text-center col-12">11:00 / 12:20 / 13:50 / <br> 15:20 / 16:50 / 18:10
                                 /
