--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -321,7 +321,7 @@
             .box {
                 width: 100%;
                 height: 578px;
-                background-image: url(./doctorImg/moon_banner_p.png);
+                background-image: url(./img/theme-banner3.jpg);
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-position: center;
