--- a/EscapeRoom/ES-theme-bomb.html
+++ b/EscapeRoom/ES-theme-bomb.html
@@ -717,7 +717,7 @@
 
         <section class="p-75 container" style="padding:200px 0;">
             <div class="row" style="flex-direction: column; align-items:center;">
-                <img src="../EscapeRoom/test/img/key.png" alt="">
+                <img src="../EscapeRoom/img/key_b.png" alt="">
                 <p class="titletext" style="color: #E55A5A;font-size: 36px;">特別提醒</p>
                 <p style="color: white; font-size: 16px; line-height: 36px;">眼明手快、動作穩定、頭腦清楚才有成功機會，</p>
                 <p style="color: white; font-size: 16px; line-height: 36px;">沒有準備好之前請勿輕易嘗試！</p>
