--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -150,7 +150,7 @@
             width: 200px;
             text-align: center;
             color: white;
-            margin-top: 75px;
+            margin-top: 50px;
             border: 1px solid white;
             font-size: 36px;
             transition: .5s;
@@ -321,10 +321,10 @@
             .box {
                 width: 100%;
                 height: 578px;
-                background-image: url(./img/theme-banner3.jpg);
+                background-image: url(./img/theme-banner-doc.png);
                 background-repeat: no-repeat;
                 background-size: cover;
-                background-position: center;
+                background-position: 65% 0;
                 overflow: hidden;
                 padding: 280px 0 0 60px;
             }
@@ -368,7 +368,7 @@
 
             .game-rules {
                 width: 100%;
-                height: 900px;
+                height: 1035px;
                 background-image: url(./doctorImg/bot_bg_p.png);
                 background-size: cover;
                 background-repeat: no-repeat;
@@ -432,6 +432,9 @@
 
             .margin-top75 {
                 margin-top: 75px;
+            }
+            .fix1{
+                margin: 40px 0;
             }
         }
     </style>
@@ -512,7 +515,7 @@
                                         <p style="color:#3E7794; font-size:24px;">『御醫』總是掌握了當時最高的醫術，
                                         </p>
                                         <p style="color:white; font-size:16px; line-height: 36px;">
-                                            並且受到皇帝極度的信任才能成為獨當一面的御醫。
+                                            並且受到皇帝的信任才能成為獨當一面的御醫。
                                         </p>
                                     </div>
                                 </div>
@@ -571,8 +574,8 @@
                             <div class="row" style="position:relative;">
                                 <img class="col-lg" src="../EscapeRoom/test/img/comic_04.png" style="width:100%;"
                                     alt="">
-                                <img style="transform:scaleX(-1); position:absolute; top:20px; right:150px;"
-                                    src="../EscapeRoom/test/img/skull ver2.gif" alt="">
+                                <!-- <img style="transform:scaleX(-1); position:absolute; top:20px; right:150px;"
+                                    src="../EscapeRoom/test/img/skull ver2.gif" alt=""> -->
                             </div>
                             <div class="row justify-content-center" style="margin-top:100px;">
                                 <p class="col-lg-5" style="color:white; font-size:16px; text-align:center;">
@@ -720,14 +723,14 @@
         </nav>
     </header> -->
 
-    <main class="phone">
+    <main style="margin-top: 60px;" class="phone">
         <div class="box">
             <img src="./doctorImg/title_p.png" alt="">
         </div>
         <div class="container text-center">
             <div class="row justify-content-center">
                 <div class="gradient col-12 d-flex justify-content-center"></div>
-                <p class="rule margin-top50">過關率：40％ <br>
+                <p class="rule">過關率：40％ <br>
                     團隊：★★★★<br>
                     操作：★★★★★<br>
                     解謎：★★★</p>
@@ -782,7 +785,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4">
-                            <div class="row justify-content-center">
+                            <div class="row justify-content-center fix1">
                                 <img class="" src="./doctorImg/time_d_p.png" alt="">
                                 <p class="titleName text-center col-12">挑戰時間</p>
                                 <p class="speakerBoss text-center col-12">60分鐘</p class="speakerBoss">
